--- a/index.html
+++ b/index.html
@@ -32,11 +32,27 @@
             margin: 20px 0;
             color: #b3005e;
         }
-        p {
+        .welcome {
+            font-size: 1.5rem;
+            color: #ff1493;
+            margin: 20px auto;
+            max-width: 700px;
+            padding: 15px;
+            background-color: #fff0f5;
+            border: 2px solid #ff99cc;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        .info-box {
             font-size: 1.2rem;
-            margin: 10px auto;
+            margin: 20px auto;
             line-height: 1.6;
-            max-width: 600px;
+            max-width: 700px;
+            padding: 20px;
+            background-color: #fff;
+            border: 2px solid #ff99cc;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
         footer {
             margin-top: 50px;
@@ -61,15 +77,25 @@
     </header>
 
     <main>
-        <h1>Adobazaar - Harufu za Kipekee, Karibu Hivi Karibuni!</h1>
-        <p>Tunafurahi kutangaza kwamba Adobazaar itazinduliwa hivi karibuni! 
-            Sasa utaweza kuagiza manukato yako uyapendayo moja kwa moja kupitia tovuti yetu ya kipekee.
-        </p>
-        <p>Jiandae kwa uzoefu wa harufu za kuvutia ambazo zitakupa hisia za kipekee na maridadi!</p>
+        <h1>Adobazaar - Harufu za Kipekee za Kukufanya Unukie Kitajiri! ♥️</h1>
+
+        <div class="welcome">
+            <p>Karibu Adobazaar, kampuni bora na ya kuaminika iliyoanzishwa mwaka 2024. 
+                Tunajivunia kusambaza manukato ya kipekee yanayobadilisha mwonekano wako na hisia zako, 
+                kukufanya uonekane na kuhisi kama mtu tajiri wa kiwango cha juu!</p>
+        </div>
+
+        <div class="info-box">
+            <p>Tunafurahi kutangaza kwamba (Adobazaar website) itazinduliwa hivi karibuni! 
+                Sasa utaweza kuweka oda na kuagiza manukato ("Perfume") yako uipendayo moja kwa moja kupitia tovuti yetu hii ya kipekee.
+            </p>
+            <p>Tunafurahi kwamba bidhaa zetu zote za manukato utazipata hapa kwenye tovuti hii na utaweza kuweka oda yako nasi tutashughurikia na kukufikishia mzigo wako popote pale ulipo ndani ya Tanzania.</p>
+            <p>Jiandae kwa uzoefu wa harufu za kuvutia ambazo zitakupa hisia za kipekee na maridadi!</p>
+        </div>
     </main>
 
     <footer>
-        <p>&copy; 2024 Adobazaar. Imeanzishwa mwaka 2024.</p>
+        <p>&copy; 2024 Adobazaar. Imeanzishwa toka mwaka 2024.</p>
         <p>Kwa mawasiliano: <a href="tel:+255710068616">+255 710 068 616</a></p>
     </footer>
 </body>
