--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Adobazaar. Imeanzishwa toka mwaka 2024.</p>
+        <p>&copy; 2024-2025 Adobazaar.</p>
         <p>Kwa mawasiliano: <a href="tel:+255710068616">+255 710 068 616</a></p>
     </footer>
 </body>
