--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
             border-bottom: 3px solid #ff66b2;
         }
         .logo {
-            width: 120px;
+            width: 160px;
             height: 120px;
-            background: url('logo.png') no-repeat center/cover;
+            background: url('logo.png') no-repeat center;
+            background-size: 130%;
             border-radius: 50%;
             margin: 0 auto;
             border: 3px solid #fff;
