--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </header>
 
     <main>
-        <h1>Adobazaar Company Limited - Harufu za Kipekee za Kukufanya Unukie Kitajiri! ♥️</h1>
+        <h1>ADO BAZAAR - Harufu za Kipekee za Kukufanya Unukie Kitajiri! ♥️</h1>
 
         <div class="welcome">
             <p>Karibu Adobazaar, kampuni bora na ya kuaminika iliyoanzishwa mwaka 2024. 
