--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
             text-align: center;
         }
         header {
-            padding: 20px;
-            background-color: #ff99cc;
-            border-bottom: 3px solid #ff66b2;
+        padding: 20px;
+        background-image: url('cover.jpg'); /* Replace with the path to your image */
+        background-size: cover; /* Ensures the image covers the entire area */
+        background-position: center; /* Centers the image */
+        border-bottom: 3px solid #ff66b2;
         }
         .logo {
             width: 160px;
