--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         }
         header {
         padding: 20px;
-        background-image: url('cover.jpg'); /* Replace with the path to your image */
+        background-image: url('cover.png'); /* Replace with the path to your image */
         background-size: cover; /* Ensures the image covers the entire area */
         background-position: center; /* Centers the image */
         border-bottom: 3px solid #ff66b2;
