--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
-<html lang="sw">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adobazaar - Karibu Hivi Karibuni!</title>
-    <link href="https://fonts.googleapis.com/css2?family=Imprima&family=Caveat&display=swap" rel="stylesheet">
+    <title>Adobazaar - Welcome Soon!</title>
+    <!-- Updated to use Quicksand font -->
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Imprima', sans-serif;
-            background: linear-gradient(to bottom right, #ffe4e1, #ffc0cb);
-            color: #333;
+            font-family: 'Quicksand', sans-serif; /* Updated font */
+            background: linear-gradient(to bottom right, #ffffff, #f2f2f2); /* Black and white background */
+            color: #333; /* Neutral text color */
             margin: 0;
             padding: 0;
             text-align: center;
         }
         header {
-        padding: 20px;
-        background-image: url('cover.jpg'); /* Replace with the path to your image */
-        background-size: cover; /* Ensures the image covers the entire area */
-        background-position: center; /* Centers the image */
-        border-bottom: 3px solid #ff66b2;
+            padding: 20px;
+            background-image: url('cover.jpg'); /* Retained */
+            background-size: cover;
+            background-position: center;
+            border-bottom: 3px solid #000; /* Updated to black */
         }
         .logo {
             width: 160px;
@@ -33,16 +34,16 @@
         }
         h1 {
             margin: 20px 0;
-            color: #b3005e;
+            color: #000; /* Black title color */
         }
         .welcome {
             font-size: 1.0rem;
-            color: #ff1493;
+            color: #000; /* Black text */
             margin: 20px auto;
             max-width: 700px;
             padding: 15px;
-            background-color: #fff0f5;
-            border: 2px solid #ff99cc;
+            background-color: #fff; /* White background */
+            border: 2px solid #000; /* Black border */
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
@@ -52,17 +53,17 @@
             line-height: 1.6;
             max-width: 700px;
             padding: 20px;
-            background-color: #fff;
-            border: 2px solid #ff99cc;
+            background-color: #fff; /* White background */
+            border: 2px solid #000; /* Black border */
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
         footer {
             margin-top: 50px;
             padding: 20px;
-            background-color: #ff66b2;
-            color: white;
-            font-family: 'Caveat', cursive;
+            background-color: #000; /* Black footer background */
+            color: white; /* White footer text */
+            font-family: 'Quicksand', sans-serif; /* Updated font */
         }
         footer p {
             margin: 5px 0;
@@ -80,26 +81,26 @@
     </header>
 
     <main>
-        <h1>ADO BAZAAR - Harufu za Kipekee za Kukufanya Unukie Kitajiri! ♥️</h1>
+        <h1>ADO BAZAAR - Unique Scents to Make You Smell Luxurious! ♥️</h1>
 
         <div class="welcome">
-            <p>Karibu Adobazaar, kampuni bora na ya kuaminika iliyoanzishwa mwaka 2024. 
-                Tunajivunia kusambaza manukato ya kipekee yanayobadilisha mwonekano wako na hisia zako, 
-                kukufanya uonekane na kuhisi kama mtu tajiri wa kiwango cha juu!</p>
+            <p>Welcome to Adobazaar, a trusted and outstanding company established in 2024. 
+                We take pride in delivering unique perfumes that transform your appearance and feelings, 
+                making you look and feel like a high-class individual!</p>
         </div>
 
         <div class="info-box">
-            <p>Tunafurahi kutangaza kwamba (Adobazaar website) itazinduliwa hivi karibuni! 
-                Sasa utaweza kuweka oda na kuagiza manukato ("Perfume") yako uipendayo moja kwa moja kupitia tovuti yetu hii ya kipekee.
+            <p>We are excited to announce that the (Adobazaar website) will be launched soon! 
+                You will now be able to place orders and purchase your favorite perfumes directly through our exclusive website.
             </p>
-            <p>Tunafurahi kwamba bidhaa zetu zote za manukato utazipata hapa kwenye tovuti hii na utaweza kuweka oda yako nasi tutashughurikia na kukufikishia mzigo wako popote pale ulipo ndani ya Tanzania.</p>
-            <p>Jiandae kwa uzoefu wa harufu za kuvutia ambazo zitakupa hisia za kipekee na maridadi!</p>
+            <p>We are happy to inform you that all our perfume products will be available here on this website, and you will be able to place your orders with us. We will process and deliver your package to any location within Tanzania.</p>
+            <p>Get ready for an enchanting scent experience that will provide you with a unique and elegant feeling!</p>
         </div>
     </main>
 
     <footer>
         <p>&copy; 2024-2025 Adobazaar.</p>
-        <p>Kwa mawasiliano: <a href="tel:+255710068616">+255 710 068 616</a></p>
+        <p>For inquiries: <a href="tel:+255710068616">+255 710 068 616</a></p>
     </footer>
 </body>
 </html>
