--- a/index.html
+++ b/index.html
@@ -73,6 +73,19 @@
             text-decoration: none;
             font-weight: bold;
         }
+        .social-icons {
+            margin-top: 10px;
+        }
+        .social-icons a {
+            margin: 0 10px;
+            display: inline-block;
+            text-decoration: none;
+        }
+        .social-icons img {
+            width: 30px;
+            height: 30px;
+            border-radius: 50%;
+        }
     </style>
 </head>
 <body>
@@ -101,6 +114,17 @@
     <footer>
         <p>&copy; 2024-2025 Adobazaar.</p>
         <p>For inquiries: <a href="tel:+255710068616">+255 710 068 616</a></p>
+        <div class="social-icons">
+            <a href="https://www.instagram.com/ado.bazaar/" target="_blank" aria-label="Instagram">
+                <img src="instagram.png" alt="Instagram">
+            </a>
+            <a href="https://www.facebook.com/share/15bYxkrV5o/" target="_blank" aria-label="Facebook">
+                <img src="facebook.png" alt="Facebook">
+            </a>
+            <a href="https://wa.me/255710068616" target="_blank" aria-label="WhatsApp">
+                <img src="whatsapp.png" alt="WhatsApp">
+            </a>
+        </div>
     </footer>
 </body>
 </html>
