--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
             <a href="https://www.facebook.com/share/15bYxkrV5o/" target="_blank" aria-label="Facebook">
                 <img src="facebook.png" alt="Facebook">
             </a>
-            <a href="https://wa.me/255710068616" target="_blank" aria-label="WhatsApp">
+            <a href="https://wa.me/255710068616?text=Hello%20Adobazaar%2C%20I%20am%20interested%20in%20learning%20more%20about%20your%20products%20and%20services." target="_blank" aria-label="WhatsApp">
                 <img src="whatsapp.png" alt="WhatsApp">
-            </a>
+            </a>            
         </div>
     </footer>
 </body>
